# AvalancheEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
buildsystem/cmake/: Options.cmake  SetupPython.cmake  TargetHelper.cmake
buildsystem/generator/: CMakeLists.txt  __init__.py  __main__.py  config.py
buildsystem/generator/binding/: __init__.py  hash.py  process.py
buildsystem/python/licenses/: cxxheaderparser-LICENSE.txt
crates/: CMakeLists.txt
crates/core/: CMakeLists.txt
crates/core/classes/: annotate.h  delegate.h  polyfill.h  type_helper.h
crates/core/classes/container/: allocator.hpp  color.hpp  exception.hpp  functional.h  hash_map.hpp  map.hpp  optional.hpp  shared_ptr.hpp  string.hpp  unique_ptr.hpp  utility.hpp  vector.hpp  vector_queue.hpp
crates/core/classes/container/impl/: red_black_tree.hpp
crates/core/private/: logger.cpp  resource.cpp  server_manager.cpp
crates/core/private/container/: allocator.cpp  exception.cpp  string.cpp
crates/core/private/event/: named_event.cpp
crates/core/private/execution/: coroutine.cpp  executor.cpp  graph.cpp
crates/core/private/manager/: module_manager.cpp  server_manager.cpp  tick_manager.cpp
crates/core/public/: core.h  logger.h  public_pch.h  resource.h  server_manager.h
crates/core/public/event/: named_event.h
crates/core/public/execution/: async_coroutine.h  coroutine.h  executor.h  generator.h  graph.h  sync_coroutine.h
crates/core/public/manager/: module_manager.h  server_manager.h  tick_manager.h
crates/engine/: CMakeLists.txt
crates/engine/private/: engine_entry.cpp
crates/engine/private/filesystem/: filesystem.cpp  system_filesystem.cpp
crates/engine/public/: engine.h
crates/engine/public/filesystem/: filesystem.h  system_filesystem.h
crates/game/: CMakeLists.txt
crates/game/private/: game_main.cpp
crates/meta/: CMakeLists.txt
crates/meta/private/: class.cpp  dynamic_container.cpp  field.cpp  metaspace.cpp  method.cpp  type_eraser.cpp
crates/meta/public/: class.h  dynamic_container.h  field.h  metamixin.h  metaspace.h  method.h  type_eraser.h
crates/rendering/: CMakeLists.txt
crates/rendering/render_device/: CMakeLists.txt
crates/rendering/render_device/private/: render_command.cpp  render_dependency_graph.cpp  render_descriptor.cpp  render_device.cpp  render_frame.cpp  render_handle.cpp  render_pipeline.cpp  render_resource.cpp
crates/rendering/render_device/public/: render_command.h  render_dependency_graph.h  render_descriptor.h  render_device.h  render_enums.h  render_frame.h  render_handle.h  render_pipeline.h  render_resource.h
crates/rendering/render_driver_vulkan/: CMakeLists.txt
crates/rendering/render_driver_vulkan/private/: vulkan_context.cpp  vulkan_context.h  vulkan_debug.cpp  vulkan_init.cpp  vulkan_render_device.cpp  vulkan_render_device_impl.h  vulkan_window.cpp  vulkan_window.h
crates/rendering/render_driver_vulkan/private/resource/: vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_encoder.cpp  vulkan_command_encoder.h  vulkan_format.cpp  vulkan_format.h  vulkan_image.cpp  vulkan_image.h  vulkan_resource.h  vulkan_resource_binding.cpp  vulkan_resource_binding.h  vulkan_semaphore.cpp  vulkan_semaphore.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_sync.cpp  vulkan_sync.h
crates/rendering/render_driver_vulkan/public/: vulkan_macro.h  vulkan_render_device.h
crates/rendering/render_driver_vulkan/tests/: CMakeLists.txt  test_main.cpp
crates/rendering/render_server/: CMakeLists.txt
crates/rendering/render_server/private/: render_server.cpp  render_server_internal.h
crates/rendering/render_server/public/: render_server.h
crates/rendering/shader_server/: CMakeLists.txt
crates/rendering/shader_server/private/: shader_compiler.cpp  shader_compiler.h  shader_server.cpp
crates/rendering/shader_server/public/: shader_server.h
crates/rendering/window_server/: CMakeLists.txt
crates/rendering/window_server/private/: window.cpp  window_server.cpp
crates/rendering/window_server/public/: window_server.h
