[tool.poetry]
name = "avalancheengine"
version = "0.1.0"
description = ""
authors = ["DarcJC <me@darc.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cxxheaderparser = "^1.3.4"
pydantic = "^2.9.0"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
